--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -3,3 +3,7 @@ $screen-md: 672px;
 $screen-lg: 1056px;
 $screen-xl: 1312px;
 $screen-max: 1584px;
+
+$monospace: 'Roboto Mono', 'PT Mono', 'IBM Plex Mono', monospace;
+$sans-serif: 'Lato', 'Noto Sans', 'PT Sans', 'Roboto', sans-serif;
+$serif: 'Lora', 'PT Serif', 'Noto Serif', serif;
