--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -2,7 +2,7 @@ footer {
   max-width: $screen-max;
   margin: auto auto 0 auto;
   width: 100%;
-  padding-bottom: 10px;
+  padding: 10px 1% 10px;
 }
 .footer {
   display: flex;
