--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -14,7 +14,6 @@ footer {
   background: var(--color-footer-bg);
   width: 100%;
   margin: 0 auto;
-  box-shadow: 0px 0px 8px 0px var(--color-boxshadow);
   @media (min-width: $screen-md) {
     width: 80%;
   }
@@ -22,5 +21,11 @@ footer {
   &__socials {
     display: flex;
     align-items:center;
+  }
+}
+.post-footer {
+  padding-right: calc(48px + 2rem);
+  @media (min-width: $screen-md) {
+    padding-right: 1%;
   }
 }
