--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,63 +1,46 @@
 <header>
-  <div class="header header-frame">
-    <div>
-      <div class="header__title">{{.Site.Title}}</div>
-      {{if .Site.Params.Description}}
-      <div class="header__description">{{.Site.Params.Description}}</div>
-      {{end}}
+    <div class="header header-frame">
+        <div>
+            <div class="header__title">{{.Site.Title}}</div>
+            {{if .Site.Params.Description}}
+                <div class="header__description">{{.Site.Params.Description}}</div>
+            {{end}}
+        </div>
+        <nav class="header-nav">
+            <ul class="header-nav-list header-nav-list--menu">
+                {{ $currentPage := . }}
+                {{ range .Site.Menus.main }}
+                    {{ if .HasChildren }}
+                    <li class="header-nav-list__item {{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }}">
+                        <a class="header-nav-list__link" href="#">
+                            {{ .Pre }}
+                            <span>{{ .Name }}</span>
+                        </a>
+                    </li>
+                    <ul class="header-nav-list">
+                        {{ range .Children }}
+                        <li class="header-nav-list__item {{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }}">
+                            <a class="header-nav-list__link" href="{{ .URL }}">{{ .Name }}</a>
+                        </li>
+                        {{ end }}
+                    </ul>
+                    {{ else }}
+                    <li class="header-nav-list__item">
+                        <a class="header-nav-list__link" href="{{ .URL }}">
+                            {{ .Pre }}
+                            <span>{{ .Name }}</span>
+                        </a>
+                    </li>
+                    {{ end }}
+                {{ end }}
+            </ul>
+            <button class="header-nav-list__nav-btn">navigation</button>
+        </nav>
+        <button class="mb-header__menu-btn">
+            <span class="mb-header__menu-btn-line"></span>
+            <span class="mb-header__menu-btn-line"></span>
+            <span class="mb-header__menu-btn-line"></span>
+        </button>
     </div>
-    <nav class="header-nav desktop">
-      <ul class="header-nav-list">
-        {{ range .Site.Taxonomies.tags }}
-        <li class="header-nav-list__item">
-          <a class="header-nav-list__link" href="{{ .Page.Permalink }}"
-            >{{ .Page.Title }}</a
-          >
-        </li>
-        {{end}}
-      </ul>
-    </nav>
-    <button class="mb-header__menu-btn">
-      <span class="mb-header__menu-btn-line"></span>
-      <span class="mb-header__menu-btn-line"></span>
-      <span class="mb-header__menu-btn-line"></span>
-    </button>
-  </div>
-  <nav class="mb-header-nav">
-    <div class="flex-between px--md py--sm">
-      <svg
-        width="240"
-        height="72"
-        viewBox="0 0 240 72"
-        class="mb-header-nav__title"
-      >
-        <text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle">
-          Navigation
-        </text>
-      </svg>
-      <button class="mb-header-nav__close-btn flex-center">
-        <svg
-          class="mb-header-nav__svg-icon"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          width="32"
-          height="32"
-        >
-          <path
-            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
-          />
-          <path d="M0 0h24v24H0z" fill="none" />
-        </svg>
-      </button>
-    </div>
-    <ul class="mb-header-nav-list mobile">
-      {{ range .Site.Taxonomies.tags }}
-      <li class="mb-header-nav-list__item">
-        <a class="mb-header-nav-list__link" href="{{ .Page.Permalink}}"
-          >{{.Page.Title}}</a
-        >
-      </li>
-      {{end}}
-    </ul>
-  </nav>
+    {{partial "mobile-header-nav" .}}
 </header>
