style and script links changed to abs links

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,4 +7,4 @@
     </div>
 </footer>
 {{$script := resources.Get "js/script.js"}}
-<script src="{{$script.RelPermalink}}"></script>
+<script src="{{$script.Permalink}}"></script>
