button link changed to baseurl

--- a/layouts/partials/button.html
+++ b/layouts/partials/button.html
@@ -1,5 +1,5 @@
 <button class="floating-button">
-    <a class="floating-button__link" href="/">
+    <a class="floating-button__link" href="{{.Site.BaseURL}}">
         <span>home</span>
     </a>
 </button>
