--- a/layouts/partials/featured.html
+++ b/layouts/partials/featured.html
@@ -10,7 +10,7 @@
     </a>
     <ul class="featured-post__tags">
         {{ range .Params.tags }}
-        <li><a href="/tags/{{. | urlize}}">{{.}}</a></li>
+            <li><a href="{{ $.Site.BaseURL }}tags/{{. | urlize}}">{{.}}</a></li>
         {{end}}
     </ul>
 </div>
