--- a/assets/scss/_list-header.scss
+++ b/assets/scss/_list-header.scss
@@ -11,7 +11,7 @@
   transition-duration: 0.2s, 0.3s, 0.3s;
   transition-timing-function: ease;
 
-  @media (min-width: $screen-md) {
+  @media (min-width: $screen-lg) {
     width: 80%;
   }
 
