--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,7 +9,7 @@
   --color-text-light: white;
   --color-text-light-2: rgba(255,255,255,0.9);
   --color-link: #0F4C81;
-  --color-hover: linear-gradient(to right, rgba(120,120,120,1) 0%, rgba(120,120, 120,0.7) 50%);
+  --color-hover: rgba(120,120,120,0.9);
   --color-border: rgba(120,120,120,1);
   --color-border-dark: black;
   --color-border-light: white;
