--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -7,6 +7,10 @@
   }
 }
 .post-content {
+  &--nopost {
+    font-size: 1.5rem;
+    text-align: center;
+  }
   h1{
     font-size: 3rem;
     font-weight: bold;
@@ -35,22 +39,25 @@
     font-size: 0.75rem;
     margin: 0.825rem 0;
   }
-  h1,h2,h3,h4,h5,h6,p,code,blockquote,a {
+  h1,h2,h3,h4,h5,h6,p,code,blockquote,a,ul,ol {
     line-height: 1.4;
     @media (min-width: $screen-lg) {
       line-height: 1.5;
     }
   }
-  p {
-    margin: 1rem 0;
-    color: var(--color-text-2);
+  p, code, blockquote, a, table, pre,ul,ol {
     font-size: 1rem;
     @media (min-width: $screen-sm) {
       font-size: 1.125rem;
     }
     @media (min-width: $screen-lg) {
       font-size: 1.25rem;
+      line-height: 1.5;
     }
+  }
+  p {
+    margin: 1rem 0;
+    color: var(--color-text-2);
   }
   blockquote {
     margin-left: 1rem;
