--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,46 +1,46 @@
 <header>
-    <div class="header header-frame">
-        <div>
-            <div class="header__title">{{.Site.Title}}</div>
-            {{if .Site.Params.Description}}
-                <div class="header__description">{{.Site.Params.Description}}</div>
-            {{end}}
-        </div>
-        <nav class="header-nav">
-            <ul class="header-nav-list header-nav-list--menu">
-                {{ $currentPage := . }}
-                {{ range .Site.Menus.main }}
-                    {{ if .HasChildren }}
-                    <li class="header-nav-list__item {{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }}">
-                        <a class="header-nav-list__link" href="#">
-                            {{ .Pre }}
-                            <span>{{ .Name }}</span>
-                        </a>
-                    </li>
-                    <ul class="header-nav-list">
-                        {{ range .Children }}
-                        <li class="header-nav-list__item {{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }}">
-                            <a class="header-nav-list__link" href="{{ .URL }}">{{ .Name }}</a>
-                        </li>
-                        {{ end }}
-                    </ul>
-                    {{ else }}
-                    <li class="header-nav-list__item">
-                        <a class="header-nav-list__link" href="{{ .URL }}">
-                            {{ .Pre }}
-                            <span>{{ .Name }}</span>
-                        </a>
-                    </li>
-                    {{ end }}
-                {{ end }}
-            </ul>
-            <button class="header-nav-list__nav-btn">navigation</button>
-        </nav>
-        <button class="mb-header__menu-btn">
-            <span class="mb-header__menu-btn-line"></span>
-            <span class="mb-header__menu-btn-line"></span>
-            <span class="mb-header__menu-btn-line"></span>
-        </button>
+  <div class="header header-frame">
+    <div>
+      <div class="header__title {{if not (isset .Site.Params "Description")}}header__title--nomargin{{end}}">{{.Site.Title}}</div>
+      {{if ( isset .Site.Params "Description")}}
+        <div class="header__description">{{.Site.Params.Description}}</div>
+      {{end}}
     </div>
-    {{partial "mobile-header-nav" .}}
+    <nav class="header-nav">
+      <ul class="header-nav-list header-nav-list--menu">
+        {{ $currentPage := . }}
+        {{ range .Site.Menus.main }}
+          {{ if .HasChildren }}
+            <li class="header-nav-list__item {{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }}">
+              <a class="header-nav-list__link" href="#">
+                {{ .Pre }}
+                <span>{{ .Name }}</span>
+              </a>
+            </li>
+            <ul class="header-nav-list">
+              {{ range .Children }}
+                <li class="header-nav-list__item {{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }}">
+                  <a class="header-nav-list__link" href="{{ .URL }}">{{ .Name }}</a>
+                </li>
+              {{ end }}
+            </ul>
+          {{ else }}
+            <li class="header-nav-list__item">
+              <a class="header-nav-list__link" href="{{ .URL }}">
+                {{ .Pre }}
+                <span>{{ .Name }}</span>
+              </a>
+            </li>
+          {{ end }}
+        {{ end }}
+      </ul>
+      <button class="header-nav-list__nav-btn">navigation</button>
+    </nav>
+    <button class="mb-header__menu-btn">
+      <span class="mb-header__menu-btn-line"></span>
+      <span class="mb-header__menu-btn-line"></span>
+      <span class="mb-header__menu-btn-line"></span>
+    </button>
+  </div>
+  {{partial "mobile-header-nav" .}}
 </header>
