--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -3,6 +3,8 @@ header {
   margin: 0 auto;
   padding: 1rem 2%;
   width: 100%;
+  position: relative;
+  z-index:100;
   @media (min-width: $screen-lg) {
     padding: 1rem 4%;
   }
@@ -60,6 +62,21 @@ header {
     background: var(--color-text-light);
     color: var(--color-text);
   }
+  &__nav-btn.css-only:hover ~ .navigation {
+    display: block !important;
+  }
+  &__nav-btn.css-only:hover:before {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 150px;
+    height: 100px;
+    top: 0;
+    right:0;
+  }
+}
+.navigation:hover {
+  display: block !important;
 }
 
 .header-nav.desktop {
@@ -77,6 +94,7 @@ header {
   display: none;
   position: fixed;
   background: var(--color-bg);
+  opacity: 0;
   z-index: 10;
   top: 0;
   left: 0;
@@ -84,6 +102,11 @@ header {
   right: 0;
   width: 100%;
   height: 100vh;
+
+  &:target {
+    display: block;
+    opacity: 1;
+  }
 
   &__wrapper {
     display: flex;
@@ -132,6 +155,9 @@ header {
     font-size: 2.5rem;
     margin: 1rem auto;
     text-align: center;
+  }
+  &__item.cssonly {
+    opacity: 1;
   }
   &__link {
     text-transform: uppercase;
