--- a/assets/scss/_list.scss
+++ b/assets/scss/_list.scss
@@ -1,6 +1,7 @@
 .post-list {
   display: flex;
   flex-flow: column nowrap;
+  height: 100%;
   margin: 0 auto;
   width: 100%;
   @media (min-width: $screen-lg) {
