--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -34,26 +34,24 @@
           {{ end }}
         {{ end }}
       </ul>
-      <button class="header-nav-list__nav-btn {{ if isset .Site.Params "cssonly"}} css-only {{ end }}">navigation</button>
+      <button class="header-nav-list__nav-btn {{ with .Site.Params.cssonly}} {{ if eq . true }} css-only {{ end }} {{end}}">navigation</button>
       {{partial "navigation" .}}
     </nav>
-    {{if isset .Site.Params "cssonly"}}
-    <a href="#mobile-header-nav" class="mb-header__menu-btn">
-        <span class="mb-header__menu-btn-line"></span>
-        <span class="mb-header__menu-btn-line"></span>
-        <span class="mb-header__menu-btn-line"></span>
-      </a>
+    {{with .Site.Params.cssonly}}
+      {{ if eq . true }}
+        <a href="#mobile-header-nav" class="mb-header__menu-btn">
+          <span class="mb-header__menu-btn-line"></span>
+          <span class="mb-header__menu-btn-line"></span>
+          <span class="mb-header__menu-btn-line"></span>
+        </a>
+      {{end}}
     {{else}}
-      <button class="{{ if isset .Site.Params "cssonly"}} css-only {{ end }} mb-header__menu-btn ">
+      <button class="mb-header__menu-btn">
         <span class="mb-header__menu-btn-line"></span>
         <span class="mb-header__menu-btn-line"></span>
         <span class="mb-header__menu-btn-line"></span>
       </button>
     {{end}}
   </div>
-  {{if isset .Site.Params "cssonly"}}
   {{partial "mobile-header-nav" .}}
-  {{else}}
-  {{partial "mobile-popup" .}}
-  {{end}}
 </header>
