--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,18 +13,9 @@
     <meta name="twitter:title" content="{{ if not .IsHome }}{{with .Title }}{{ . }}{{ end }}{{else}}{{ .Site.Title }}{{end}}"/>
     <meta name="twitter:description" content="{{if .IsHome}}{{ .Site.Params.description }}{{else}}{{.Description}}{{end}}"/>
 
-    {{ if (fileExists "static/apple-touch-icon.png") -}}
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    {{ end -}}
-    {{ if (fileExists "static/favicon-32.png") -}}
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    {{ end -}}
-    {{ if (fileExists "static/favicon-16.png") -}}
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    {{ end -}}
-    {{ if (fileExists "static/site.webmanifest") -}}
-        <link rel="manifest" href="/site.webmanifest">
-    {{ end -}}
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
+    <link rel="manifest" href="site.webmanifest">
 
     {{ $style := resources.Get "scss/style.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
     <link rel="stylesheet" href="{{$style.Permalink}}" >
